Rename to Egyptians in CS

--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Egyptians in AI</title>
+  <title>Egyptians in CS</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property='og:title' content="Egyptians in AI Research"/>
+  <meta property='og:title' content="Egyptians in Computer Science"/>
   <meta property='og:image' content="assets/thumbnail.png"/>
-  <meta property='og:url' content='https://bkhmsi.github.io/egyptians-in-ai/'/>
+  <meta property='og:url' content='https://egyptians-in-cs.github.io/Egyptians-in-cs/'/>
   <meta property="og:type" content='website'/>
   <meta name="twitter:image" content="assets/thumbnail.png"/>
   <meta name="twitter:card" content="summary"/>
-  <meta property='og:description' content="A website dedicated to showcasing the profiles of prominent Egyptian researchers in the field of Artificial Intelligence."/>
+  <meta property='og:description' content="A website dedicated to showcasing the profiles of prominent Egyptian researchers in Computer Science."/>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-GK1G1LSYTJ"></script>
   <script>
