--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,21 @@
 
     gtag('config', 'G-GK1G1LSYTJ');
   </script>
+  <!-- Single Page Apps for GitHub Pages -->
+  <script type="text/javascript">
+    // This script checks if a redirect is present in the query string,
+    // converts it back to the correct url and adds it to the browser history.
+    (function(l) {
+      if (l.search[1] === '/' ) {
+        var decoded = l.search.slice(1).split('&').map(function(s) {
+          return s.replace(/~and~/g, '&')
+        }).join('?');
+        window.history.replaceState(null, null,
+            l.pathname.slice(0, -1) + decoded + l.hash
+        );
+      }
+    }(window.location))
+  </script>
 </head>
 <body>
   <app-root></app-root>
